<resources>
    <string name="app_name">Task1</string>
    <string name="policy_term">Policy Term : 28 Years</string>
    <string name="till_you">Till You Turn : 30</string>
    <string name="download">Download Brochure</string>
    <string name="priceInc">Price Increase Soon</string>
    <string name="kshButtonTxt">ksh 7,087/Yr</string>
    <string name="cover">(Ksh 10 Million Cover)</string>
    <string name="limited_pay">Limited Pay : Save upto 39% more</string>
    <string name="claim_settlement">3hrs Claim Settlement</string>
    <string name="lumpsum">lumpsum ksh 10,000,000 on death</string>
    <string name="income">Monthly income : Nill</string>
    <string name="pre_medical">Pre-medical test Required : Yes</string>
    <string name="filter">Filter</string>
    <string name="compare_plans">Compare Plans</string>
    <string name="payment_type">Payment Type</string>
    <string name="policy_term_in_filter">Policy Term</string>
    <string name="coverage_in_filter">Coverage</string>
    <string name="million_10">10 Million</string>
    <string name="million_1">1 Million</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">Yearly</string>
    <string name="years_28">28 Years</string>
    <string name="years_20">20 Years</string>
    <string name="years_15">15 Years</string>
    <string name="close"><font color="#ff0300">X</font></string>

    <string name="company_name1">Heritage</string>
    <string name="company_name2">GA Insurance</string>
    <string name="please_enter_otp">Please enter the OTP that you have received to your mobile number <font color="#4353ea">+254 786678567</font> </string>
    <string name="enter_your_otp_here">Enter your OTP here</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_otp">Didn\'t Receive OTP?</string>
    <string name="resend_otp">Resend OTP.</string>
    <string name="alert_for_otp">Please Enter your valid One Time Password</string>
    <string name="ok"><font color="#231cff">OK</font></string>
    <string name="view_more">View more</string>
    <string name="base_url">https://uat-integrationportal.insure.digital/api/v1/ip</string>
    <string name="k_250">250k</string>
    <string name="k_300">300k</string>
    <string name="k_500">500k</string>
    <string name="error_msg">Your Request has some technical issues. An incident is created and escalated to the Technical support team. You will be contacted soon for issue resolution.</string>
    <string name="do_you_smoke_or_chew_tobacco">Do You Smoke or Chew Tobacco?</string>
    <string name="coverage">Coverage</string>
    <string name="term">Term</string>
    <string name="to_view_accurate_quotes_please_confirm_your_details_below">To View Accurate quotes, please confirm your details below</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="view_plans">Get Quotes</string>


</resources>