<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightdarkcolorgrey"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/activity_margin_25dp"
        android:text="Enter OTP"
        android:textStyle="bold"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:textColor="@color/blue"
        android:textSize="@dimen/activity_margin_20sp"
        />


    <TextView
        android:id="@+id/textViewInOTPPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label"
        android:layout_margin="@dimen/activity_margin_30dp"
        android:text="@string/please_enter_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:textSize="@dimen/activity_margin_14sp"/>

    <EditText
        android:id="@+id/editTextInOTP"
        android:layout_width="@dimen/activity_margin_250dp"
        android:layout_height="@dimen/activity_margin_35dp"
        android:layout_marginTop="@dimen/activity_margin_40dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/enter_your_otp_here"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:textSize="@dimen/activity_margin_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInOTPPopUp" />

    <android.widget.Button
        android:id="@+id/submitButtonInOTP"
        android:layout_width="@dimen/activity_margin_150dp"
        android:layout_height="@dimen/activity_margin_35dp"
        android:layout_marginTop="@dimen/activity_margin_30dp"
        android:text="@string/submit"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:textColor="@color/white"
        android:background="@drawable/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextInOTP"
        />
    <TextView
        android:id="@+id/didntReceiveOtp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/latinotypeantartidaroundedmedium"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_margin_12sp"
        app:layout_constraintTop_toBottomOf="@id/submitButtonInOTP"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/didn_t_receive_otp"
        android:layout_marginTop="@dimen/activity_margin_20dp"
        android:layout_marginStart="@dimen/activity_margin_70dp"
        android:layout_marginBottom="@dimen/activity_margin_50dp"
        />

    <TextView
        android:id="@+id/resendOtp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/didntReceiveOtp"
        app:layout_constraintTop_toBottomOf="@id/submitButtonInOTP"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/latinotypeantartidaroundedmedium"
        android:textSize="@dimen/activity_margin_12sp"
        android:text="@string/resend_otp"
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/activity_margin_20dp"
        android:layout_marginStart="@dimen/activity_margin_10dp"
        android:layout_marginBottom="@dimen/activity_margin_50dp"
        />
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitButtonInOTP"
        android:fontFamily="@font/latinotypeantartidaroundedmedium"
        android:textSize="@dimen/activity_margin_12sp"
        android:text=""
        android:textColor="@color/blue"
        android:layout_marginTop="@dimen/activity_margin_10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>