<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_10dp"
            android:layout_marginEnd="@dimen/activity_margin_10dp"
            android:layout_marginStart="@dimen/activity_margin_10dp"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_100dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_margin_90dp"
                    android:orientation="vertical"
                    android:layout_gravity="center|start">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/activity_margin_12sp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/activity_margin_15dp"
                        android:fontFamily="@font/latinotypeantartidaroundedbold"
                        android:layout_height="@dimen/activity_margin_30dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/coverage_in_filter"/>
                    <Spinner
                        android:id="@+id/coverageSpinner"
                        android:layout_width="@dimen/activity_margin_110dp"
                        android:dropDownWidth="@dimen/activity_margin_100dp"
                        android:textAlignment="center"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                </LinearLayout>
                <View
                    android:layout_width="@dimen/activity_margin_5dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_margin_5dp"
                    android:layout_marginTop="@dimen/activity_margin_10dp"
                    android:layout_marginBottom="@dimen/activity_margin_10dp"
                    android:background="@drawable/dotted_vertical_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_margin_90dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="@dimen/activity_margin_12sp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/activity_margin_15dp"
                        android:fontFamily="@font/latinotypeantartidaroundedbold"
                        android:layout_height="@dimen/activity_margin_30dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/policy_term_in_filter"/>
                    <Spinner
                        android:id="@+id/policyTermSpinner"
                        android:layout_width="@dimen/activity_margin_110dp"
                        android:textAlignment="center"
                        android:dropDownWidth="@dimen/activity_margin_100dp"
                        android:spinnerMode="dialog"
                        android:layout_height="match_parent"
                        android:gravity="center"/>

                </LinearLayout>
                <View
                    android:layout_width="@dimen/activity_margin_5dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_margin_10dp"
                    android:layout_marginBottom="@dimen/activity_margin_10dp"
                    android:background="@drawable/dotted_vertical_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_margin_90dp"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/activity_margin_5dp"
                    android:layout_marginEnd="@dimen/activity_margin_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/activity_margin_30dp"
                        android:layout_marginEnd="@dimen/activity_margin_5dp"
                        android:layout_marginStart="@dimen/activity_margin_10dp"
                        android:fontFamily="@font/latinotypeantartidaroundedbold"
                        android:gravity="start|center_vertical"
                        android:layout_gravity="center"
                        android:text="@string/payment_type"
                        android:textSize="@dimen/activity_margin_12sp"
                        android:textStyle="bold"
                        />

                    <Spinner
                        android:id="@+id/paymentTypeSpinner"
                        android:layout_width="@dimen/activity_margin_110dp"
                        android:layout_height="match_parent"
                        android:textAlignment="textStart"
                        android:dropDownWidth="@dimen/activity_margin_100dp"
                        android:layout_marginEnd="@dimen/activity_margin_10dp"
                        android:layout_gravity="start" />

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_10dp"
            android:layout_marginEnd="@dimen/activity_margin_10dp"
            >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_margin_40dp"
            android:background="@color/lightdarkcolorgrey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/activity_margin_150dp"
                android:layout_height="match_parent"
                android:layout_gravity="start">

                <TextView
                    android:id="@+id/comparePlans"
                    android:layout_width="@dimen/activity_margin_110dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/activity_margin_10dp"
                    android:layout_marginStart="@dimen/activity_margin_20dp"
                    android:textSize="@dimen/activity_margin_10sp"
                    android:gravity="center"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:textAlignment="center"
                    android:text="@string/compare_plans"
                    />



            </LinearLayout>

            <View
                android:layout_width="@dimen/activity_margin_10dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_margin_5dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin_5dp"
                android:layout_marginBottom="@dimen/activity_margin_5dp"
                android:background="@drawable/dotted_vertical_line" />


            <LinearLayout
                android:layout_width="@dimen/activity_margin_150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:layout_marginStart="@dimen/activity_margin_20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_margin_50dp"
                    android:drawablePadding="@dimen/activity_margin_2dp"
                    android:fontFamily="@font/latinotypeantartidaroundedbold"
                    android:gravity="center"
                    android:text="@string/filter"
                    android:textSize="@dimen/activity_margin_10sp"
                    app:drawableStartCompat="@drawable/filter" />


            </LinearLayout>

        </GridLayout>

        </LinearLayout>

        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/activity_margin_5dp"
                android:divider="@color/white"
                android:id="@+id/listView1"
                />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/blurLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/foggy_white"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>

